update BooksFragment with recyclerview and add models

--- a/app/src/main/res/layout/fragment_books.xml
+++ b/app/src/main/res/layout/fragment_books.xml
@@ -1,13 +1,11 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+             android:id="@+id/chapterList"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
+             app:layoutManager="LinearLayoutManager"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="com.software.rmh.tourthebible.views.BooksFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello BooksFragment!"/>
 
-</FrameLayout>
+</android.support.v7.widget.RecyclerView>
