--- a/app/src/main/res/layout/fragment_versions.xml
+++ b/app/src/main/res/layout/fragment_versions.xml
@@ -1,13 +1,9 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
+             android:id="@+id/versionList"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="com.software.rmh.tourthebible.views.VersionsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello VersionsFragment!"/>
 
-</FrameLayout>
+</ListView>
