make book list sit above bottom bar when scrolled to the bottom

--- a/app/src/main/res/layout/fragment_books.xml
+++ b/app/src/main/res/layout/fragment_books.xml
@@ -1,4 +1,4 @@
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/bookList"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
@@ -8,4 +8,4 @@
              tools:context="com.software.rmh.tourthebible.views.BooksFragment">
 
 
-</android.support.v7.widget.RecyclerView>
+</ListView>
