--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
 
     <FrameLayout
         android:id="@+id/container"
+        android:layout_marginBottom="56dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
